# handwriting

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  train.py
examples/: dataset.ipynb  inference.ipynb
examples/pretrained/: epoch=90-step=18473.ckpt
hw/: data.py
hw/models/: beam.py  cnn_encoder.py  crnn.py
