[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hw"
version = "0.1.0"
description = "An example Python project"
authors = [
    {name = "Jane Doe", email = "jane.doe@example.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages]
find = {include = ["hw*", "hw"]}